fixed overlap error

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,7 @@ p {
         width: 80%;
         right: auto;
         left: 10%;
+        top: 43%;
     }
     .container {
       padding-right: 15px;
